@@ -23,6 +23,7 @@ import it.polimi.demo.model.GameModel;
 import it.polimi.demo.model.interfaces.PlayerIC;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -33,35 +34,18 @@ public class GameModelTest {
     @BeforeEach
     public void setUp() {
         gameModel = new GameModel();
+
+
     }
 
-    /*
-    @Test
-    public void testAreConnectedPlayersEnough() {
-        assertFalse(gameModel.areConnectedPlayersEnough());
-        // Add enough players to start the game
-        Player player = new Player("Player1");
-        gameModel.addPlayer(player);
-        Player player2 = new Player("Player2");
-        gameModel.addPlayer(player2);
 
-        assertTrue(gameModel.areConnectedPlayersEnough());
-    }
-
-    @Test
-    public void testIsTheCurrentPlayerConnected() {
-        assertFalse(gameModel.isTheCurrentPlayerConnected());
-        // Aggiungi giocatori sufficienti per iniziare la partita
-        addPlayersToGameModel(DefaultValues.MinNumOfPlayer);
-        assertTrue(gameModel.isTheCurrentPlayerConnected());
-    }*/
-/*
+    //--------------------methods for player + connection/disconnection management-------------------
     @Test
     public void testGetBeginnerPlayer() {
-        assertNull(gameModel.getBeginnerPlayer());
+        assertThrows(NoSuchElementException.class, ()->gameModel.getBeginnerPlayer());
         addPlayersToGameModel(DefaultValues.MinNumOfPlayer);
         assertNotNull(gameModel.getBeginnerPlayer());
-    }*/
+    }
 
     @Test
     public void testGetAllPlayers() {
@@ -136,7 +120,7 @@ public class GameModelTest {
     @Test
     public void testRemovePlayer() {
         addPlayersToGameModel(DefaultValues.MinNumOfPlayer);
-        Player playerToRemove = gameModel.getAllPlayers().get(0);
+        Player playerToRemove = gameModel.getAllPlayers().getFirst();
         assertEquals(DefaultValues.MinNumOfPlayer, gameModel.getAllPlayers().size());
         gameModel.removePlayer(playerToRemove);
         assertFalse(gameModel.getAllPlayers().contains(playerToRemove));
@@ -149,7 +133,181 @@ public class GameModelTest {
             gameModel.addPlayer(new Player("Player" + i));
         }
     }
+    @Test
+    public void testSetPlayerAsConnected() {
+        Player player1 = new Player("Player1");
+
+        assertFalse(gameModel.areConnectedPlayersEnough());
+        gameModel.addPlayer(player1);
+
+        Player player2 = new Player("Player2");
+        gameModel.addPlayer(player2);
+        assertEquals(2, gameModel.getAllPlayers().size());
+
+        assertThrows(IllegalArgumentException.class, () -> gameModel.setPlayerAsConnected(player1));
+        assertThrows(IllegalArgumentException.class, () -> gameModel.setPlayerAsConnected(player2));
+
+        player1.setAsConnected();
+        gameModel.setPlayerAsConnected(player1);
+
+        assertEquals(1, gameModel.getPlayersConnected().size());
+        assertNotEquals(2, gameModel.getPlayersConnected().size());
+
+        assertTrue(gameModel.isTheCurrentPlayerConnected());
+        assertFalse(gameModel.areConnectedPlayersEnough());
+        player2.setAsConnected();
+        gameModel.setPlayerAsConnected(player2);
+        assertTrue(gameModel.areConnectedPlayersEnough());
+    }
+
+    @Test
+    public void testSetPlayerAsDisconnected() {
+
+        Player player1 = new Player("Player 1");
+        Player player2 = new Player("Player 2");
+
+        // add and connect a player to the game
+        gameModel.addPlayer(player1);
+        player1.setAsConnected();
+        gameModel.setPlayerAsConnected(player1);
+
+        // Verify that the player1 is connected
+        assertTrue(player1.getIsConnected());
+        // Disconnect player1
+        gameModel.setPlayerAsDisconnected(player1);
+        //Verify that the player1 is disconnect and not ready to start
+        assertFalse(player1.getIsConnected());
+        assertFalse(player1.getReadyToStart());
+        //Verify that the player1 is not in players_connected list
+
+        assertFalse(gameModel.getPlayersConnected().contains(player1));
+
+        // Verifica che il metodo notify_playerDisconnected sia stato chiamato con i parametri corretti
+        //verify(listener_handler).notify_playerDisconnected(gameModel, player1.getNickname());
+
+        // Add and connect player2
+        gameModel.addPlayer(player2);
+        player2.setAsConnected();
+        gameModel.setPlayerAsConnected(player2);
+
+
+        // Disconnect player2
+        gameModel.setPlayerAsDisconnected(player2);
+        assertFalse(player2.getIsConnected());
+
+        // Verifica che il metodo notify_onlyOnePlayerConnected sia stato chiamato
+        //verify(listener_handler).notify_onlyOnePlayerConnected(gameModel, DefaultValues.secondsToWaitReconnection);
+    }
+
+    @Test
+    public void testReconnectPlayer() {
+        Player player1 = new Player("Player1");
+        gameModel.addPlayer(player1);
+        player1.setAsConnected();
+        gameModel.setPlayerAsConnected(player1);
+
+        // Verify that a player can't reconnect if he is already connected
+        assertThrows(PlayerAlreadyConnectedException.class, () -> gameModel.reconnectPlayer(player1));
+
+        // Disconnect player1
+        gameModel.setPlayerAsDisconnected(player1);
+
+        // Verify that the player can reconnect after being disconnected
+        assertDoesNotThrow(() -> gameModel.reconnectPlayer(player1));
+        assertTrue(player1.getIsConnected());
+        // Verifica che il metodo notify_playerReconnected sia stato chiamato con i parametri corretti
+        //verify(listener_handler).notify_playerReconnected(gameModel, player1.getNickname());
+    }
+
+    @Test
+    public void testConnectPlayerInOrder() {
+        Player player1 = new Player("Player1");
+        Player player2 = new Player("Player2");
+        Player player3 = new Player("Player3");
+        Player player4 = new Player("Player4");
+
+
+        gameModel.addPlayer(player1);
+        gameModel.addPlayer(player2);
+        gameModel.addPlayer(player3);
+
+        player1.setAsConnected();
+        gameModel.setPlayerAsConnected(player1);
+        player2.setAsConnected();
+        gameModel.setPlayerAsConnected(player2);
+        player3.setAsConnected();
+        gameModel.setPlayerAsConnected(player3);
+
+        assertEquals(player2, gameModel.getPlayersConnected().get(1));
+        assertEquals(player3, gameModel.getPlayersConnected().get(2));
+        assertEquals(player1, gameModel.getPlayersConnected().getFirst());
+
+        assertTrue(player2.getIsConnected());
+        assertTrue(gameModel.getPlayersConnected().contains(player2));
+
+        //disconnect a player in the middle of players_connected
+        gameModel.setPlayerAsDisconnected(player2);
+        assertFalse(gameModel.getPlayersConnected().contains(player2));
+
+
+        assertThrows(IllegalArgumentException.class, () -> gameModel.connectPlayerInOrder(player4));
+        assertEquals(0, gameModel.getAllPlayers().indexOf(player2) - 1);
+        assertEquals(0, gameModel.getAllPlayers().indexOf(player1));
+
+        assertEquals(player3, gameModel.getPlayersConnected().get(1));
+        assertEquals(player1, gameModel.getPlayersConnected().getFirst());
+        gameModel.connectPlayerInOrder(player2);
+
+
+        // Verify that players were added correctly to players_connected list
+        assertTrue(gameModel.getPlayersConnected().contains(player1));
+        assertTrue(gameModel.getPlayersConnected().contains(player2));
+        assertTrue(gameModel.getPlayersConnected().contains(player3));
+
+        // Verify that the players were added in correct order
+        assertEquals(player2, gameModel.getPlayersConnected().get(1));
+        assertEquals(player1, gameModel.getPlayersConnected().get(0));
+        assertEquals(player3, gameModel.getPlayersConnected().get(2));
+
+        //disconnect the firstPlayer
+        gameModel.setPlayerAsDisconnected(player1);
+        assertFalse(gameModel.getPlayersConnected().contains(player1));
+        gameModel.connectPlayerInOrder(player1);
+
+        assertEquals(player2, gameModel.getPlayersConnected().get(0));
+        assertEquals(player3, gameModel.getPlayersConnected().get(1));
+        assertEquals(player1, gameModel.getPlayersConnected().get(2));
+    }
+
+    //------------------------game logic management------------------------
+    @Test
+    public void testDealCards() {
+        addPlayersToGameModel(3);
+        CommonBoard common_board = new CommonBoard();
+        common_board.setPlayerCount(gameModel.getAllPlayers().size());
+        common_board.initializeBoard();
+        gameModel.dealCards();
+
+        // Verify that all players has received the correct cards
+
+        for (int i = 0; i < gameModel.getAllPlayers().size(); i++) {
+            Player player = gameModel.getAllPlayers().get(i);
+            {
+                assertNotNull(player.getStarterCard());
+                assertEquals(3, player.getCardHand().size());
+                assertEquals(2, player.getSecretObjectiveCards().length);
+            }
+        }
+
+        // Verifica che i mazzi comuni siano stati ridotti di carte correttamente
+        //assertEquals(3, gameModel.getCommonBoard().getStarterConcreteDeck().size());
+        assertEquals(34, gameModel.getCommonBoard().getResourceConcreteDeck().size());
+        assertEquals(37, gameModel.getCommonBoard().getGoldConcreteDeck().size());
+        //assertEquals(/* expected size */, gameModel.getCommonBoard().getObjectiveConcreteDeck().size());
+    }
+
+
+
 
 
 }
-
